--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>TeleBot</artifactId>
     <version>1.0</version>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.pengrad</groupId>
@@ -42,7 +47,7 @@
                 <appName>yourAppName_on_Heroku</appName>
                 <processTypes>
                     <worker>
-                        java $JAVA_OPTS -cp target/classes:target/dependency/* src.main.java.startcoder.Run-class
+                        java $JAVA_OPTS -cp target/classes:target/dependency/* target.classes.startcode.Run-class
                     </worker>
                 </processTypes>
             </configuration>
