--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
     <build>
     <plugins>
         <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.2</version>
+        </plugin>
+        <plugin>
             <groupId>com.heroku.sdk</groupId>
             <artifactId>heroku-maven-plugin</artifactId>
             <version>2.0.8</version>
