--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,43 @@
     <build>
     <plugins>
         <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.6.1</version>
+            <configuration>
+                <failOnError>false</failOnError>
+                <retryOnError>true</retryOnError>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>auto-clean</id>
+                    <phase>initialize</phase>
+                    <goals>
+                        <goal>clean</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.1.1</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>Run</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        <plugin>
             <groupId>com.heroku.sdk</groupId>
             <artifactId>heroku-maven-plugin</artifactId>
             <version>2.0.8</version>
             <configuration>
-                <appName>yourAppName_on_Heroku</appName>
+                <appName>telegram-bot-hyperpop</appName>
                 <processTypes>
                     <worker>
-                        java $JAVA_OPTS -cp target/classes:target/dependency/* target.classes.startcode.Run-class
+                        java $JAVA_OPTS -cp target/classes:target/dependency/* target/classes/startcode/Run-class
                     </worker>
                 </processTypes>
             </configuration>
